manifests/websocket-gateway/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-gateway
  namespace: websocket
spec:
  replicas: 2
  selector:
    matchLabels:
      name: websocket-gateway
  template:
    metadata:
      labels:
        name: websocket-gateway
    spec:
      containers:
        - name: application
          image: metinagaoglu/go-websocket:1.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
