manifests/websocket-gateway/rabbitmq.deployment.yaml
# rabbitmq-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:latest
        ports:
        - containerPort: 5672  # RabbitMQ default port
        - containerPort: 15672 # RabbitMQ management plugin port
