manifests/websocket-gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  namespace: websocket
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 8000
  selector:
    name: websocket-gateway
